--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #fff;
-    color: #333;
 }
 
 .container {
@@ -25,8 +24,10 @@ header {
 }
 
 .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-size: 24px;
+    font-weight: 700;
+    color: #252B42;
+    margin-top: 13px;
 }
 
 nav ul {
@@ -38,11 +39,14 @@ nav ul li {
     margin-left: 20px;
 }
 
+
 nav ul li a {
     text-decoration: none;
     color: #737373;
     font-size: 1rem;
     font-weight: 700;
+    line-height: 24px;
+    letter-spacing: 0.2px;
 }
 
 .header-buttons {
@@ -62,19 +66,37 @@ nav ul li a {
     background: none;
     color: #FF685B;
     font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.2px;
+    text-align: right;
 }
 
 .header-buttons .join-us {
     background: #FF685B;
     color: #fff;
     font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.2px;
+    padding: 15px 25px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.header-buttons .join-us img.arrow-icon {
+    margin-left: 10px;
+    width: 12px;
+    height: 10px;
 }
 
 .hero-section {
-    padding: 50px 0;
+    padding: 20px 0;
     background-color: #f9f9f9;
     display: flex;
     align-items: center;
+    margin: -50px 0 0 0;
 }
 
 .hero-container {
@@ -82,123 +104,136 @@ nav ul li a {
     align-items: center;
     justify-content: space-between;
     position: relative;
+    z-index: 1;
 }
 
 .hero-content {
     max-width: 50%;
+    margin-left: 10%;
 }
 
-.hero-content h1 {
-    font-size: 3rem;
-    color: #333;
+.header-tag {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.1px;
+    color: #FF685B;
+    margin-bottom: 35px;
 }
 
-.hero-content p {
-    font-size: 1.2rem;
-    margin: 20px 0;
+.headline {
+    font-size: 58px;
+    line-height: 80px;
+    letter-spacing: 0.2px;
+    margin-bottom: 35px;
+    color: #252B42;
+}
+
+.sub-headline {
+    font-size: 20px;
+    line-height: 30px;
+    letter-spacing: 0.2px;
+    font-weight: 400;
+    color: #737373;
+    margin-bottom: 35px;
 }
 
 .hero-buttons {
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
+    gap: 10px;
 }
 
 .hero-buttons .btn {
-    padding: 15px 30px;
+    padding: 15px 40px;
     text-decoration: none;
     border-radius: 5px;
-    margin-right: 10px;
 }
 
 .hero-buttons .btn-primary {
     background: #FF685B;
     color: #fff;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.2px;
+    text-align: center;
 }
 
 .hero-buttons .btn-secondary {
     background: none;
     color: #FF685B;
     border: 1px solid #FF685B;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 22px;
+    letter-spacing: 0.2px;
+    text-align: center;
 }
 
-.hero-images {
+.hero-image {
     position: relative;
     width: 50%;
-    height: 500px;
-}
-
-.hero-images img {
-    position: absolute;
-}
-
-.doctor {
-    top: 20%;
-    left: 20%;
-    width: 70%;
+    height: 700px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     z-index: 1;
 }
 
-.blob {
-    top: 50%;
-    left: 16%;
-    width: 75%;
-    z-index: 0;
-}
-
-.vector-big {
-    top: 40%;
-    left: 20%;
-    width: 85%;
-    z-index: 0;
-}
-
-.vector-small {
-    top: 40%;
-    left: 20%;
-    width: 7%;
-    z-index: 0;
+.hero-image img {
+    width: 100%;
+    height: auto;
 }
 
 .services-section {
     padding: 50px 0;
     text-align: left;
     position: relative;
+    margin-top: -200px;
     z-index: 2;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .service-card {
     display: inline-block;
     width: 30%;
-    margin: 2%;
     padding: 30px;
     background: #fff;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 13px 19px rgba(0, 0, 0, 0.07);
     border-radius: 10px;
     z-index: 2;
 }
 
 .service-icon {
-    font-size: 3rem;
-    color: #FF685B;
+    width: 72px;
+    height: 72px;
     margin: 20px 20px 0 20px;
+    box-sizing: border-box;
 }
 
 .service-card h3 {
-    font-size: 1.5rem;
-    margin: 20px 20px 0 20px;
-    color: #333;
+    font-size: 16px;
+    color: #252B42;
     font-weight: 700;
+    margin: 20px 20px 0 20px;
+    box-sizing: border-box;
 }
 
 .service-line {
     width: 50px;
-    height: 3px;
-    background-color: #FF685B;
+    height: 2px;
+    background-color: #E74040;
     margin: 20px 20px 0 20px;
+    box-sizing: border-box;
 }
 
 .service-card p {
-    font-size: 1rem;
-    color: #666;
+    font-size: 14px;
+    font-weight:400;
+    color: #737373;
     margin: 20px 20px 0 20px;
+    box-sizing: border-box;
+    letter-spacing: 0.2px
 }
